Try supporting macOS Tahoe efi_builder

--- a/payloads/Config/config.plist
+++ b/payloads/Config/config.plist
@@ -757,12 +757,30 @@
                     <key>ExecutablePath</key>
                     <string></string>
                     <key>MaxKernel</key>
-                    <string></string>
+                    <string>24.99.99</string>
                     <key>MinKernel</key>
                     <string></string>
                     <key>PlistPath</key>
                     <string>Contents/Info.plist</string>
                 </dict>
+                <dict>
+					<key>Arch</key>
+					<string>x86_64</string>
+					<key>Comment</key>
+					<string>USB Map for Tahoe</string>
+					<key>Enabled</key>
+					<false/>
+					<key>MaxKernel</key>
+					<string></string>
+					<key>MinKernel</key>
+					<string>25.0.0</string>
+					<key>BundlePath</key>
+					<string>USB-Map-Tahoe.kext</string>
+					<key>ExecutablePath</key>
+					<string></string>
+					<key>PlistPath</key>
+					<string>Contents/Info.plist</string>
+				</dict>
                 <dict>
                     <key>Arch</key>
                     <string>x86_64</string>
@@ -2842,7 +2860,7 @@
             <key>APFS</key>
             <dict>
                 <key>EnableJumpstart</key>
-                <true/>
+                <false/>
                 <key>GlobalConnect</key>
                 <false/>
                 <key>HideVerbose</key>
@@ -2936,6 +2954,18 @@
                     <key>Path</key>
                     <string>OpenCanopy.efi</string>
                 </dict>
+                <dict>
+				    <key>Comment</key>
+				    <string></string>
+				    <key>Path</key>
+				    <string>apfs_aligned.efi</string>
+				    <key>Enabled</key>
+				    <false/>
+				    <key>Arguments</key>
+				    <string></string>
+				    <key>LoadEarly</key>
+				    <false/>
+			    </dict>
                 <dict>
                     <key>Arguments</key>
                     <string></string>
